Edit content index.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1>Welcome to Group 11' Presentation</h1>
+    <ul>
+        Members
+        <li>Lê Anh Nhân - 20110689</li>
+        <li>Trần Bửu Quyến - 20110305</li>
+    </ul>
 </body>
 </html>
